--- a/circle.yml
+++ b/circle.yml
@@ -7,6 +7,13 @@ dependencies:
     - go get -u github.com/jteeuwen/go-bindata/...
     - go get -u github.com/elazarl/go-bindata-assetfs/...
     - go get -u github.com/vektra/mockery/...
+    - go get -u github.com/Sirupsen/logrus/...
+    - go get -u github.com/gin-gonic/contrib/ginrus/...
+    - go get -u github.com/ianschenck/envflag/... 
+    - go get -u github.com/joho/godotenv/autoload/...
+    - go get -u github.com/lgtmco/lgtm/router/...
+    - go get -u github.com/lgtmco/lgtm/router/middleware/...
+    - make gen
     - GOOS=linux GOARCH=386 go build -o lgtm
 
 test:
