update dependencies and pipe cf output to null to avoid pword leakage

--- a/circle.yml
+++ b/circle.yml
@@ -8,11 +8,10 @@ dependencies:
     - go get -u github.com/elazarl/go-bindata-assetfs/...
     - go get -u github.com/vektra/mockery/...
     - go get -u github.com/Sirupsen/logrus/...
-    - go get -u github.com/gin-gonic/contrib/ginrus/...
+    - go get -u github.com/gin-gonic/contrib/...
     - go get -u github.com/ianschenck/envflag/... 
-    - go get -u github.com/joho/godotenv/autoload/...
+    - go get -u github.com/joho/godotenv/...
     - go get -u github.com/lgtmco/lgtm/router/...
-    - go get -u github.com/lgtmco/lgtm/router/middleware/...
     - make gen
     - GOOS=linux GOARCH=amd64 go build -o lgtm
 
@@ -27,10 +26,10 @@ deployment:
   staging:
     branch: /.*/
     commands:
-      - cf api $CF_API_DEV
-      - cf auth $CF_STAGING_USER $CF_STAGING_PASSWORD
-      - cf target -o $CF_ORG_DEV
-      - cf target -s $CF_SPACE_DEV
-      - cf push $APP_NAME 
+      - cf api $CF_API_DEV 2>&1 /dev/null
+      - cf auth $CF_STAGING_USER $CF_STAGING_PASSWORD 2>&1 /dev/null
+      - cf target -o $CF_ORG_DEV 2>&1 /dev/null
+      - cf target -s $CF_SPACE_DEV 2>&1 /dev/null
+      - cf push $APP_NAME 2>&1 /dev/null
 
 
