--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,7 @@ dependencies:
     - go get -u github.com/elazarl/go-bindata-assetfs/...
     - go get -u github.com/vektra/mockery/...
     - go get -u github.com/Sirupsen/logrus/...
-    - go get -u github.com/gin-gonic/contrib/...
+    - go get -u github.com/gin-gonic/contrib/ginrus
     - go get -u github.com/ianschenck/envflag/... 
     - go get -u github.com/joho/godotenv/...
     - go get -u github.com/lgtmco/lgtm/router/...
