--- a/circle.yml
+++ b/circle.yml
@@ -11,7 +11,8 @@ dependencies:
     - go get -u github.com/gin-gonic/contrib/ginrus
     - go get -u github.com/ianschenck/envflag/... 
     - go get -u github.com/joho/godotenv/...
-    - go get -u github.com/lgtmco/lgtm/router/...
+    - go get -u github.com/lgtmco/lgtm/router
+    - go get -u github.com/lgtmco/lgtm/router/middleware
     - make gen
     - GOOS=linux GOARCH=amd64 go build -o lgtm
 
