fix formatting for symbolic link

--- a/circle.yml
+++ b/circle.yml
@@ -4,7 +4,7 @@ machine:
 
 dependencies:
   override:
-    - ln -s /home/ubuntu/AusDTO /home/ubuntu/.go_project/src/github.com/lgtmco
+    - ln -s /home/ubuntu/lgtm /home/ubuntu/.go_project/src/github.com/lgtmco/lgtm
     - go get -u github.com/jteeuwen/go-bindata/...
     - go get -u github.com/elazarl/go-bindata-assetfs/...
     - go get -u github.com/vektra/mockery/...
