shift lgtmco repo into workspace not project

--- a/circle.yml
+++ b/circle.yml
@@ -4,7 +4,8 @@ machine:
 
 checkout:
   post:
-    - ln -s /home/ubuntu/.go_project/src/github.com/AusDTO /home/ubuntu/.go_project/src/github.com/lgtmco
+    - mkdir -p /home/ubuntu/.go_workspace/src/github.com/lgtmco
+    - ln -s /home/ubuntu/lgtm /home/ubuntu/.go_workspace/src/github.com/lgtmco/lgtm
 
 dependencies:
   override:
