--- a/circle.yml
+++ b/circle.yml
@@ -6,6 +6,7 @@ checkout:
   post:
     - mkdir -p /home/ubuntu/.go_workspace/src/github.com/lgtmco
     - ln -s /home/ubuntu/lgtm /home/ubuntu/.go_workspace/src/github.com/lgtmco/lgtm
+    - cp -R /home/ubuntu/lgtm/vendor/github.com/* /home/ubuntu/.go_workspace/src/github.com/
 
 dependencies:
   override:
