--- a/circle.yml
+++ b/circle.yml
@@ -14,6 +14,7 @@ checkout:
 dependencies:
   override:
     - go get -u github.com/vektra/mockery/...
+    - go get -u github.com/jteeuwen/go-bindata/...
     - make gen
     - GOOS=linux GOARCH=amd64 go build -o lgtm
 
