--- a/circle.yml
+++ b/circle.yml
@@ -25,6 +25,9 @@ deployment:
   staging:
     branch: /.*/
     commands:
+      - "curl -v -L -o cf-cli_amd64.deb 'https://cli.run.pivotal.io/stable?release=debian64&version=6.17.0&source=github'"
+      - sudo dpkg -i cf-cli_amd64.deb
+      - cf -v
       - cf api $CF_API_DEV 2>&1 /dev/null
       - cf auth $CF_STAGING_USER $CF_STAGING_PASSWORD 2>&1 /dev/null
       - cf target -o $CF_ORG_DEV 2>&1 /dev/null
