--- a/circle.yml
+++ b/circle.yml
@@ -25,7 +25,7 @@ deployment:
   staging:
     branch: /.*/
     commands:
-      - "curl -v -L -o cf-cli_amd64.deb 'https://cli.run.pivotal.io/stable?release=debian64&version=6.17.0&source=github'"
+      - curl -v -L -o cf-cli_amd64.deb 'https://cli.run.pivotal.io/stable?release=debian64&source=github'
       - sudo dpkg -i cf-cli_amd64.deb
       - cf -v
       - cf api $CF_API_DEV 2>&1 /dev/null
