--- a/circle.yml
+++ b/circle.yml
@@ -29,7 +29,7 @@ deployment:
       - sudo dpkg -i cf-cli_amd64.deb
       - cf -v
       - cf api $CF_API_DEV 2>&1 /dev/null
-      - cf auth $CF_STAGING_USER $CF_STAGING_PASSWORD 2>&1 /dev/null
+      - cf auth $CF_STAGING_USER $CF_STAGING_PASSWORD &> /dev/null
       - cf target -o $CF_ORG_DEV 2>&1 /dev/null
       - cf target -s $CF_SPACE_DEV 2>&1 /dev/null
       - cf push $APP_NAME 2>&1 /dev/null
